--- a/src/main/resources/com/treevalue/clock/clock.fxml
+++ b/src/main/resources/com/treevalue/clock/clock.fxml
@@ -17,7 +17,7 @@
     <VBox xmlns:fx="http://javafx.com/fxml">
         <!-- 第一栏：显示时间 -->
         <HBox>
-            <Label fx:id="timeDisplay" alignment="CENTER" prefHeight="45.0" prefWidth="359.0" styleClass="combo-box"
+            <Label fx:id="timeDisplay" alignment="CENTER" prefHeight="55.0" prefWidth="362.0" styleClass="combo-box"
                    text=" 12:00:00" textAlignment="CENTER" textOverrun="CLIP">
                 <font>
                     <Font name="Consolas Italic" size="38.0"/>
@@ -34,7 +34,7 @@
                 </font>
             </Label>
             <Region prefHeight="0.0" prefWidth="6.0"/>
-            <TextField fx:id="alarmTime" alignment="CENTER" prefHeight="40.0" prefWidth="279.0" promptText="HH:MM:SS"
+            <TextField fx:id="alarmTime" alignment="CENTER" prefHeight="51.0" prefWidth="282.0" promptText="HH:MM:SS"
                        styleClass="large-text" text="HH:mm:ss">
                 <font>
                     <Font name="Consolas" size="30.0"/>
@@ -51,8 +51,7 @@
                 </font>
             </Label>
             <Region prefHeight="0.0" prefWidth="7.0"/>
-            <ComboBox fx:id="timerOptions" prefHeight="39.0" prefWidth="280.0"
-                      promptText="7 min">
+            <ComboBox fx:id="timerOptions" prefHeight="39.0" prefWidth="280.0" promptText="7 min">
                 <!-- 这里的选项可以在控制器中初始化 -->
             </ComboBox>
         </HBox>
@@ -66,33 +65,35 @@
             </Label>
             <Label/>
             <Region prefHeight="0.0" prefWidth="9.0"/>
-            <ComboBox fx:id="ringtoneOptions" prefHeight="34.0" prefWidth="145.0"
-                      promptText="我在那一个角落患过伤风">
+            <ComboBox fx:id="ringtoneOptions" prefHeight="34.0" prefWidth="145.0" promptText="我在那一个角落患过伤风">
                 <!-- 铃声选项在控制器中设置 -->
             </ComboBox>
             <Region prefHeight="0.0" prefWidth="15.0"/>
             <Button fx:id="playBt" minWidth="53.0" prefHeight="33.0" prefWidth="53.0" text="Play"/>
             <Region prefHeight="0.0" prefWidth="11.0"/>
-            <Button fx:id="stopBt" minWidth="53.0" prefHeight="34.0" prefWidth="53.0" text="Stop"/>
+            <Button fx:id="stopBt" minWidth="53.0" prefHeight="34.0" prefWidth="57.0" text="Stop"/>
         </HBox>
 
-        <!-- 第五栏：响铃时长设置 -->
+        <!-- 第五栏：响铃begin设置 -->
         <HBox>
-            <Label prefHeight="29.0" prefWidth="74.0" text="Volume:">
+            <Label prefHeight="29.0" prefWidth="74.0" text="Volume   :">
                 <font>
                     <Font name="Consolas" size="33.0"/>
                 </font>
             </Label>
             <Label/>
-            <Slider fx:id="durationSlider" max="15" min="0" prefHeight="24.0" prefWidth="227.0" value="15"/>
-            <Label fx:id="dratLb" alignment="CENTER" prefHeight="31.0" prefWidth="50.0" text="0" textAlignment="CENTER"/>
+            <Region prefHeight="0.0" prefWidth="7.0"/>
+            <Slider fx:id="durationSlider" max="15" min="0" prefHeight="24.0" prefWidth="184.0" value="15"/>
+            <Label fx:id="dratLb" alignment="CENTER" prefHeight="31.0" prefWidth="39.0" text="0"
+                   textAlignment="CENTER"/>
+            <Button fx:id="tryBt" mnemonicParsing="false" prefHeight="30.0" prefWidth="58.0" text="try"/>
             <!-- 滑动条用于选择时长 -->
         </HBox>
         <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="361.0">
-            <Button fx:id="ensureBt" layoutX="130.0" minWidth="49.0" prefHeight="31.0" prefWidth="64.0" styleClass="button"
-                    text="Ensure"/>
+            <Button fx:id="ensureBt" layoutX="130.0" minWidth="49.0" prefHeight="31.0" prefWidth="64.0"
+                    styleClass="button" text="Ensure"/>
             <Region prefHeight="31.0" prefWidth="21.0"/>
-            <Button fx:id="CclBt" layoutX="30.0" prefHeight="31.0" prefWidth="65.0" styleClass="button" text="Cancel"/>
+            <Button fx:id="stopAlarmBt" layoutX="30.0" prefHeight="31.0" prefWidth="65.0" styleClass="button" text="Cancel"/>
         </HBox>
     </VBox>
 </AnchorPane>
